<resources>
    <string name="app_name">EaseGrocery</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="password">Password</string>
    <string name="otp">OTP</string>
    <string name="sendOtp">Send OTP</string>
    <string name="verify">Verify</string>
    <string name="proceed">Continue</string>
    <string name="login">Login</string>
    <string name="wrongOtp">Wrong OTP</string>
    <string name="invalidPhone">Invalid Phone Number</string>
</resources>